<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="SpUsage">


    <com.healthy.library.watcher.AlphaTextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wheel_cancel"
        android:paddingStart="20dp"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        android:textSize="16dp"
        android:textColor="#9596A4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.healthy.library.watcher.AlphaTextView
        android:id="@+id/tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wheel_confirm"
        android:paddingStart="20dp"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        android:textSize="16dp"
        android:textColor="#FF6266"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_cancel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_choose_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_service_time"
        android:textColor="#ff222222"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@id/tv_confirm"
        app:layout_constraintStart_toStartOf="@id/tv_cancel"
        app:layout_constraintTop_toBottomOf="@id/tv_cancel"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffff6266"
        android:textSize="24dp"
        android:fontFamily="@string/font_sans_serif_medium"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_time_title"
        tools:text="2018-10-29  10:30"/>

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_year"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="14dp"
        android:textColor="#222222"
        app:layout_constraintEnd_toStartOf="@id/tv_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date"/>

    <TextView
        android:id="@+id/tv_month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_month"
        android:gravity="center"
        android:textSize="14dp"
        android:textColor="#222222"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_year"
        app:layout_constraintEnd_toStartOf="@id/tv_day"
        app:layout_constraintStart_toEndOf="@id/tv_year"/>

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_day"
        android:gravity="center"
        android:textSize="14dp"
        android:textColor="#222222"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_year"
        app:layout_constraintEnd_toStartOf="@id/tv_hour"
        app:layout_constraintStart_toEndOf="@id/tv_month"/>

    <TextView
        android:id="@+id/tv_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_hour"
        android:gravity="center"
        android:textSize="14dp"
        android:textColor="#222222"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_year"
        app:layout_constraintEnd_toStartOf="@id/tv_min"
        app:layout_constraintStart_toEndOf="@id/tv_day"/>

    <TextView
        android:id="@+id/tv_min"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_min"
        android:gravity="center"
        android:textSize="14dp"
        android:textColor="#222222"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_hour"/>


    <com.healthy.library.widget.WheelPicker
        android:id="@+id/picker_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@id/picker_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_year"/>

    <com.healthy.library.widget.WheelPicker
        android:id="@+id/picker_month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/picker_day"
        app:layout_constraintStart_toEndOf="@id/picker_year"
        app:layout_constraintTop_toTopOf="@id/picker_year"/>

    <com.healthy.library.widget.WheelPicker
        android:id="@+id/picker_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/picker_hour"
        app:layout_constraintStart_toEndOf="@id/picker_month"
        app:layout_constraintTop_toTopOf="@id/picker_year"/>

    <com.healthy.library.widget.WheelPicker
        android:id="@+id/picker_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/picker_min"
        app:layout_constraintStart_toEndOf="@id/picker_day"
        app:layout_constraintTop_toTopOf="@id/picker_year"/>

    <com.healthy.library.widget.WheelPicker
        android:id="@+id/picker_min"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/picker_hour"
        app:layout_constraintTop_toTopOf="@id/picker_year"/>
</androidx.constraintlayout.widget.ConstraintLayout>