<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    tools:ignore="MissingDefaultResource,SpUsage">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_share_bg"
        android:layout_height="wrap_content"
        android:id="@+id/topShare"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="分享给更多的人"
            android:visibility="gone"
            android:textColor="#ff666666"
            android:textSize="14dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:src="@drawable/index_ic_close"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.healthy.library.widget.ImageTextView
            android:id="@+id/tv_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="微信"
            android:textColor="#ff222222"
            android:textSize="12sp"
            app:drawable="@drawable/ic_share2_weixin"
            android:gravity="center"
            android:drawablePadding="9dp"
            android:layout_marginBottom="45dp"
            android:layout_marginTop="33dp"
            android:tag="@string/lib_share_wx"
            app:position="2"
            app:drawableWidth="54dp"
            app:drawableHeight="54dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_timeline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"/>

        <com.healthy.library.widget.ImageTextView
            android:id="@+id/tv_timeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="朋友圈"
            android:textColor="#ff222222"
            android:textSize="12sp"
            android:tag="@string/lib_share_circle"
            app:position="2"
            app:drawableWidth="54dp"
            app:drawableHeight="54dp"
            app:drawable="@drawable/ic_share2_wxcircle"
            android:gravity="center"
            android:drawablePadding="9dp"
            app:layout_constraintEnd_toStartOf="@id/tv_qq"
            app:layout_constraintStart_toEndOf="@id/tv_wx"
            app:layout_constraintTop_toTopOf="@id/tv_wx"/>

        <com.healthy.library.widget.ImageTextView
            android:id="@+id/tv_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="QQ"
            android:tag="@string/lib_share_qq"
            android:textColor="#ff222222"
            android:textSize="12sp"
            app:drawable="@drawable/ic_share2_qq"
            android:gravity="center"
            android:drawablePadding="9dp"
            app:position="2"
            app:drawableWidth="54dp"
            app:drawableHeight="54dp"
            app:layout_constraintEnd_toStartOf="@id/tv_qzone"
            app:layout_constraintStart_toEndOf="@id/tv_timeline"
            app:layout_constraintTop_toTopOf="@id/tv_wx"/>

        <com.healthy.library.widget.ImageTextView
            android:id="@+id/tv_qzone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="QQ空间"
            android:tag="@string/lib_share_qzone"
            android:textColor="#ff222222"
            android:textSize="12sp"
            app:drawable="@drawable/ic_share2_wxzone"
            android:gravity="center"
            android:drawablePadding="9dp"
            app:position="2"
            app:drawableWidth="54dp"
            app:drawableHeight="54dp"
            app:layout_constraintEnd_toStartOf="@id/tv_sina"
            app:layout_constraintStart_toEndOf="@id/tv_qq"
            app:layout_constraintTop_toTopOf="@id/tv_wx"/>


        <com.healthy.library.widget.ImageTextView
            android:id="@+id/tv_sina"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="新浪微博"
            android:tag="@string/lib_share_sina"
            android:textColor="#ff222222"
            android:textSize="12sp"
            app:drawable="@drawable/ic_share2_sina"
            android:gravity="center"
            android:drawablePadding="9dp"
            app:position="2"
            app:drawableWidth="54dp"
            app:drawableHeight="54dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_qzone"
            app:layout_constraintTop_toTopOf="@id/tv_wx"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/iv_share_close"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_share_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content"
        android:text="取消"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:gravity="center"
        android:textColor="#ff444444"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/topShare">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>

