<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:background="@drawable/shape_tools_datepick"
    tools:ignore="SpUsage">






    <LinearLayout
        android:id="@+id/picker_dayLL"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/picker_hourLL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.healthy.library.widget.WheelPicker
            android:id="@+id/picker_day"
            app:selectedTextSize="16sp"
            app:itemTextSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:halfVisibleItemCount="1"/>
        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_day"
            android:gravity="center"
            android:visibility="invisible"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@id/picker_dayLL"
            app:layout_constraintBottom_toBottomOf="@id/picker_dayLL"
            app:layout_constraintEnd_toEndOf="@id/picker_dayLL"
            android:textColor="#222222"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/picker_hourLL"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/picker_dayLL"
        app:layout_constraintTop_toTopOf="@id/picker_dayLL"
        app:layout_constraintEnd_toStartOf="@+id/picker_minLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.healthy.library.widget.WheelPicker
            android:id="@+id/picker_hour"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:halfVisibleItemCount="1"/>
        <TextView
            android:id="@+id/tv_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_hour"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="#222222"
            app:layout_constraintTop_toTopOf="@id/picker_dayLL"
            app:layout_constraintBottom_toBottomOf="@id/picker_dayLL"
            app:layout_constraintEnd_toEndOf="@id/picker_hourLL"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/picker_minLL"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/picker_hourLL"
        app:layout_constraintTop_toTopOf="@id/picker_dayLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.healthy.library.widget.WheelPicker
            android:id="@+id/picker_min"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:halfVisibleItemCount="1"/>
        <TextView
            android:id="@+id/tv_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_min"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="#222222"
            app:layout_constraintTop_toTopOf="@id/picker_dayLL"
            app:layout_constraintBottom_toBottomOf="@id/picker_dayLL"
            app:layout_constraintEnd_toEndOf="@id/picker_minLL"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>