<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="6dp"
    app:cardElevation="0dp"
    tools:ignore="SpUsage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.healthy.library.widget.DotView
            android:id="@+id/dot"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="20dp"
            app:dot_end_color="#22DDDD"
            app:dot_start_color="#4DE4B6"
            app:layout_constraintBottom_toBottomOf="@id/tv_dateTmp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_dateTmp"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:layout_marginStart="13dp"
            android:textColor="#444444"
            android:fontFamily="sans-serif"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toEndOf="@id/dot"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2019-01-28"/>

        <TextView
            android:id="@+id/tv_dateTmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:visibility="invisible"
            android:layout_marginStart="13dp"
            android:textColor="#444444"
            android:fontFamily="sans-serif"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toEndOf="@id/dot"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2019-01-28"/>


        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff222222"
            android:textSize="12dp"
            android:fontFamily="@string/font_sans_serif_medium"
            android:layout_marginStart="9dp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_dateTmp"
            app:layout_constraintLeft_toRightOf="@id/tv_date"
            tools:text=" - 出生"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ff222222"
            android:textSize="16dp"
            android:lines="1"
            android:textStyle="bold"
            android:fontFamily="@string/font_sans_serif_medium"
            android:ellipsize="end"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@id/iv_enter"
            app:layout_constraintStart_toStartOf="@id/tv_dateTmp"
            app:layout_constraintTop_toBottomOf="@id/tv_dateTmp"
            tools:text="标题标题标题标题标题标题标题标题标题"/>

        <ImageView
            android:id="@+id/iv_enter"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/index_ic_vaccine_detail"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/tv_reason_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index_vaccine_reason"
            android:textColor="#ff222222"
            android:textSize="13dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title"/>

        <TextView
            android:id="@+id/tv_reason"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffff6266"
            android:textSize="14dp"
            android:lines="1"
            android:ellipsize="end"
            android:fontFamily="@string/font_sans_serif"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_reason_title"
            app:layout_constraintEnd_toStartOf="@id/iv_enter"
            app:layout_constraintStart_toEndOf="@id/tv_reason_title"
            tools:text="预防乙型肝炎预防乙型肝炎"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>